 v0.2 (not yet released)
 - issue #112 : update ic_launcher-web.png icon
 - issue #111 : add xxhdpi and xxxhdpi version of all images
 - optimize size of PNG images
 - use SystemClock.elapsedRealtime() to get elapsed time in milliseconds in AriadneLocation.isRecent()
 - issue #78 : add classes to convert (rotate) sets of coordinates
 - Redesign arrow pointing to destination, using RotationConverter and Coordinates classes
 - issue #125 : add property to Coordinates class to close a line 
 - issue #130 : remove unnecessary AriadneLocation conversion and try-catch in DetailsActivity and MainActivity
 - issue #132 : remove Android permission INTERNET, it is not needed to get WiFi/cell phone based location updates
 - issue #133 : Add list of used sensors to AndroidManifest
 - issue #103 : Don't calculate speed if distance between current and previous location is smaller than the current accuracy
 - issue #135 : Update JavaDoc on website (gh-pages) after a successful Travis CI build.
 - translated to German (thanks to Christian Orj and Kilian Köppchen)
 - translated to Romanian (thanks to Eduard Moraru)
 - issue #143 : compile against latest Android SDK using maven-android-sdk-deployer plugin
 - issue #144 : use Robolectric for unit tests
 - issue #41 : use sensors (gyroscope, acceleration, compass) to get more accurate bearing

 v0.1.1 (released on 04Dec2013)
 - updated license info about third party material
 - updated ic_action_refresh.png icon
 - added feature list to README.md

 v0.1 (released on 03Dec2013)
features :
 - determine location based on GPS signal, WiFi or cell phone network :
     - use best/most accurate location provider
     - get location updates automatically (based on a time interval or change of location) or
     - get location on demand (by manually refreshing)
 - save a location
 - ‘get back’ mode : indicator pointing to a stored location (showing distance and direction)
 - indicate current speed and current bearing