@@ -16,6 +16,7 @@
  - issue #143 : compile against latest Android SDK using maven-android-sdk-deployer plugin
  - issue #144 : use Robolectric for unit tests
  - issue #41 : use sensors (gyroscope, acceleration, compass) to get more accurate bearing
+ - issue #131 : add Preference to enable sensor based updates of current bearing
 
  v0.1.1 (released on 04Dec2013)
  - updated license info about third party material
